2002-02-14  Ian Lance Taylor  <ian@airs.com>

	* lib/buffer.c: Add MALLOC_BUFFERS case to use malloc/free for
	each buffer, to permit easy use of debugging malloc.

	* chat.c (fcsend): Permit \M and \m in any type of chat script.
	* uucp.texi (Chat Scripts): Document \M and \m here.
	(dial File): Don't document \M and \m here.

	* uuconf/chatc.c (_uuconf_ichat_cmd): Treat chat-program used with
	no arguments as specifying no chat-program.

2002-02-08  Ian Lance Taylor  <ian@airs.com>

	* install-sh: Replace with current version from automake.

	* configure.in: Don't put AC_MSG_WARN for ftime on the same line
	as AC_MSG_RESULT.
	* configure: Rebuild.

	* uuxqt.c (uqdo_xqt_file): If uucp is not a permitted command,
	then reject a uucp command which does not have two arguments.
	(fqforward): Don't crash if zfile is NULL.

	* log.c (ulog): Add code to HDB_LOGGING case to protect the
	administrator against foolishness.

	* Meno Abels: uux.c (main): Correct off-by-one error in memory
	allocation.

	* Vadim Radionov: copy.c (fcopy_open_file): Check for read
	errors.

	* Michael Ju. Tokarev: unix/serial.c (fsserial_open): Force port
	into blocking mode, in case the chat program cares.

	* unix/umode.c: New file.
	* unix/access.c (fsysdep_daemon_access): Change error message if
	stat returns EACCES.
	* uucp.c (uccopy): Use ixsysdep_user_file_mode to get the file
	mode.
	* system.h (ixsysdep_user_file_mode): Declare.
	* unix/Makefile.am (libunix_a_SOURCES): Add umode.c.
	* unix/Makefile.in: Rebuild.

	* Roland McGrath: unix/work.c (fsysdep_get_work_init): Add cmax
	parameter.  Change all callers.
	(fsysdep_get_work): Likewise.
	* system.h (fsysdep_get_work_init): Update declaration.
	(fsysdep_get_work): Likewise.

	* unix/tcp.c: Use getaddrinfo if available to decide how to call
	the socket functions.
	* configure.in: Check for getaddrinfo and struct
	sockaddr_storage.
	* configure, config.h.in: Rebuild.

	* unix/mkdirs.c (fsysdep_make_dirs): Correct error message in case